created an object to appanf dice images

--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
         <h2 id="player-two-total"></h2>
       </div>
       <h3>Dice Roll</h3>
+      <div id="dice-roll">
         <h2 id="dice-number"></h2>
+      </div>
         <button id='roll-button' type="button" class="btn btn-success">Roll</button>
         <button id="hold-button" type="button" class="btn btn-danger">Hold</button>
       <h3>Running Total</h3>
