--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
    <link href="css/styles.css" rel="stylesheet" type="text/css">
    <script src="js/jquery-1.12.4.js"></script>
-   <script src="js/scripts.js"></script>
+   <script src="js/objects.js"></script>
   </head>
   <body>
     <div class="container">
