--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
    <link href="css/styles.css" rel="stylesheet" type="text/css">
    <script src="js/jquery-1.12.4.js"></script>
-   <script src="js/objects.js"></script>
+   <script src="js/computer.js"></script>
   </head>
   <body>
     <div class="container">
@@ -15,21 +15,32 @@
       </div>
       <div class="row">
         <div id="player-one-score" class="col-sm-6 highlight">
-          <h2>Player 1</h2>
+          <h2 class="player">Player 1</h2>
           <h2 id="player-one-total"></h2>
         </div>
         <div id="player-two-score" class="col-sm-6">
-          <h2>Player 2</h2>
+          <h2 class="player">Player 2</h2>
           <h2 id="player-two-total"></h2>
         </div>
+        <div id="player-computer-score" class="col-sm-6">
+          <h2 class="player">Player 2</h2>
+          <h2 id="player-computer-total"></h2>
+        </div>
       </div>
+      <div class="choose-button">
+        <button id="comp" type="inline-button"class="btn">Play the Computer</button>
+        <button id="friend" type="inline-button" class="btn">Play a Friend</button>
+      </div>
+      <div id="running">
+      <h2>Running Total</h2>
+      <h2 id="running-total"></h2>
+    </div>
       <div id="dice-roll">
         <img class='dice-images' src="img/dice_six.jpg">
       </div>
-        <button id='roll-button' type="button" class="btn btn-default btn-lg center-block">Roll</button>
-        <button id="hold-button" type="button" class="btn btn-primary btn-lg center-block">Hold</button>
-      <h3>Running Total</h3>
-      <h2 id="running-total"></h2>
+        <button id='roll-button' type="button" class="btn center-block">Roll</button>
+        <button id="hold-button" type="button" class="btn center-block">Hold</button>
+
     </div>
   </body>
 </html>
