finished animation and styling all pages.

--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
     </div>
   </div>
   <div id="winner">
-    <h1 class="title">Winner!</h1>
+    <div id="winner-title">
+
+    </div>
     <img id="pig" src="img/pig_0.png" alt="a cute pig" />
     <img id="dice-left" src="img/cracked_dice.jpg">
     <img id="dice-right" src="img/cracked_dice_right.jpg">
